Fixing missing dependencies and Analysis behaviour. No JS errors
Important:
Style is CountrySTAT Afg
Configurations are relative to CountrySTAT Afg

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>CountrySTAT Afghanistan</title>
+    <title>CountrySTAT Zambia</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -12,7 +12,7 @@
     <meta name="author" content="Nicola Selleri <nicola.selleri[at]fao.org>">
 
     <!-- Third Party CSS -->
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//fenixrepo.fao.org/cdn/js/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- FENIX CSS -->
     <link rel="stylesheet" href="css/host.css">
@@ -25,8 +25,6 @@
 
 <div id="wrapper">
 
-
-
     <!-- Sidebar -->
     <div id="sidebar-wrapper"></div>
     <!-- /#sidebar-wrapper -->
@@ -35,7 +33,8 @@
     <div id="page-content-wrapper" class="home-content">
 
         <div class="page-content-toolbar">
-            <a href="#menu-toggle" class="btn btn-default page-content-toolbar-btn" id="menu-toggle"> <span class="icojam_linen"></span></a>
+            <a href="#menu-toggle" class="btn btn-default page-content-toolbar-btn" id="menu-toggle"> <span
+                    class="icojam_linen"></span></a>
         </div>
 
         <div class="container-fluid">
@@ -53,7 +52,10 @@
                         <div><b>Central Statistic Organization</b></div>
                         <div>Islamic Republic of Afghanistan</div>
                         <br><br>
-                        <p>We use a statistical framework and applied information system for analysis and policy-making designed in order to organize, integrate and disseminate statistical data and metadata on food and agriculture coming from different sources.</p>
+
+                        <p>We use a statistical framework and applied information system for analysis and policy-making
+                            designed in order to organize, integrate and disseminate statistical data and metadata on
+                            food and agriculture coming from different sources.</p>
 
 
                         <div class="home-detail-pointer">
@@ -69,19 +71,26 @@
                         <div class="home-stats-footer">
 
                             <div class="row">
-                                <div class="col-xs-2 "><h3>Land use</h3><p class="subtitle">(1000 ha)</p></div>
-                                <div class="col-xs-2"><h3>65223</h3><p class="subtitle">TOTAL</p></div>
-                                <div class="col-xs-3 pie-holder"><div id="percentage-one" class="afg-home-stats"></div><h3 >37910</h3><p class="subtitle">AGRICULTURAL</p></div>
-                                <div class="col-xs-3 pie-holder"> <div id="percentage-two" class="afg-home-stats"></div><h3>27313</h3><p class="subtitle">NON-AGRICULTURAL</p></div>
+                                <div class="col-xs-2 "><h3>Land use</h3>
+
+                                    <p class="subtitle">(1000 ha)</p></div>
+                                <div class="col-xs-2"><h3>65223</h3>
+
+                                    <p class="subtitle">TOTAL</p></div>
+                                <div class="col-xs-3 pie-holder">
+                                    <div id="percentage-one" class="afg-home-stats"></div>
+                                    <h3>37910</h3>
+
+                                    <p class="subtitle">AGRICULTURAL</p></div>
+                                <div class="col-xs-3 pie-holder">
+                                    <div id="percentage-two" class="afg-home-stats"></div>
+                                    <h3>27313</h3>
+
+                                    <p class="subtitle">NON-AGRICULTURAL</p></div>
                             </div>
 
 
-
-
-
-
                         </div>
-
 
 
                     </div>
@@ -91,9 +100,9 @@
             <div class="row">
                 <div class="col-xs-12 partners-holder">
 
-                        <h4>MAIN PARTNERS</h4>
-                        <div class="partner-holder"> <img src="css/img/partners/logos.png" class="img-responsive"> </div>
+                    <h4>MAIN PARTNERS</h4>
 
+                    <div class="partner-holder"><img src="css/img/partners/logos.png" class="img-responsive"></div>
 
 
                 </div>
@@ -105,27 +114,36 @@
                     <div class="col-xs-12 col-sm-3 col-sm-height col-full-height home-tile aims">
                         <h4 class="afg-title">PRINCIPAL AIMS</h4>
                         <ol class="uae-responsability">
-                            <li>Support country expertise by providing methodology, classification and coding system for collection, standardization and harmonization of data coming from various local sources.
+                            <li>Support country expertise by providing methodology, classification and coding system for
+                                collection, standardization and harmonization of data coming from various local sources.
                             </li>
                             <li>Promote partnerships between various statistical institutions within countries.
                             </li>
-                            <li>Assist countries in integrating and organizing national data to make them comparable at international level.
+                            <li>Assist countries in integrating and organizing national data to make them comparable at
+                                international level.
                             </li>
-                            <li>Establishing national statistical databases covering economic, social, demographic, environment,
+                            <li>Establishing national statistical databases covering economic, social, demographic,
+                                environment,
                                 energy and other fields.
                             </li>
                             <li>Facilitate the analysis of data for supply utilization accounts and food balance sheets
                             </li>
-                            <li>Implement a programme that facilitates electronic data collection from countries, reducing the burden on these countries in completing numerous questionnaires.</li>
+                            <li>Implement a programme that facilitates electronic data collection from countries,
+                                reducing the burden on these countries in completing numerous questionnaires.
+                            </li>
                         </ol>
                     </div>
                     <div class="col-xs-12 col-sm-3 col-sm-height col-full-height home-tile gray">
                         <div class="news-content">
                             <h4 class="afg-title">NEWS</h4>
+
                             <h2 class="home-tiles-title">Technical Working Group</h2>
+
                             <p>02-04 November 2014</p>
+
                             <div>
-                                <a  class="btn btn-default more pull-right"> <span class="icojam_button_new_1"></span></a>
+                                <a class="btn btn-default more pull-right"> <span
+                                        class="icojam_button_new_1"></span></a>
                             </div>
                         </div>
 
@@ -133,6 +151,7 @@
                     </div>
                     <div class="col-xs-12 col-sm-3 col-sm-height col-full-height home-tile map">
                         <h4 class="afg-title">GEO-LOCATION</h4>
+
                         <h3>33 00 N, 65 00 E</h3>
                     </div>
 
@@ -145,7 +164,8 @@
                 <div class="col-xs-12 afg-footer">
                     <div class="afg-footer-text">
                         <p>2015 ® Central Statistic Organization</p>
-                        <p class="pull-right">POWERED BY FENIX <img src="css/img/fenix-logo.jpg"> </p>
+
+                        <p class="pull-right">POWERED BY FENIX <img src="css/img/fenix-logo.jpg"></p>
                     </div>
 
                 </div>
@@ -164,7 +184,8 @@
 <!-- /#wrapper -->
 
 <!-- data-main attribute tells require.js to load scripts/main.js after require.js loads. -->
-<script data-main="scripts/mains/index" src="//fenixapps.fao.org/repository/js/requirejs/2.1.15/require.min.js"></script>
+<script data-main="scripts/mains/index"
+        src="//fenixrepo.fao.org/cdn/js/requirejs/2.1.15/require.min.js"></script>
 
 </body>
 </html>
