--- a/modules.html
+++ b/modules.html
@@ -112,7 +112,8 @@
 
 <!-- Javascript
 ================================================== -->
-<script data-main="scripts/mains/modules" src="scripts/lib/require.js"></script>
+<script data-main="scripts/mains/modules"
+        src="//fenixrepo.fao.org/cdn/js/requirejs/2.1.15/require.min.js"></script>
 
 </body>
 </html>
