--- a/analysis.html
+++ b/analysis.html
@@ -14,7 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- Third Party CSS -->
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="//fenixrepo.fao.org/cdn/js/bootstrap/3.3.4/css/bootstrap.min.css" >
     <link rel="stylesheet" href='//fenixapps.fao.org/repository/js/jqwidgets/3.1/styles/jqx.base.css'/>
     <link rel="stylesheet" href='//fenixapps.fao.org/repository/js/pnotify/2.0.1/pnotify.core.css'/>
     <link rel="stylesheet" href='//fenixapps.fao.org/repository/js/introjs/1.0.0/introjs.css'/>
@@ -129,7 +129,7 @@
 <!-- ==========
      Javascript -->
 <script data-main="scripts/mains/analysis"
-        src="//fenixapps.fao.org/repository/js/requirejs/2.1.15/require.min.js"></script>
+        src="//fenixrepo.fao.org/cdn/js/requirejs/2.1.15/require.min.js"></script>
 
 </body>
 </html>
