--- a/createdataset.html
+++ b/createdataset.html
@@ -41,7 +41,8 @@
 </head>
 <body>
 
-<script data-main="scripts/mains/datamng" src="//fenixapps.fao.org/repository/js/requirejs/2.1.15/require.min.js"></script>
+<script data-main="scripts/mains/datamng"
+        src="//fenixrepo.fao.org/cdn/js/requirejs/2.1.15/require.min.js"></script>
 
 </body>
 </html>
