--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>CountrySTAT Cameroon</title>
+    <title>CountrySTAT Zambia</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -63,7 +63,7 @@
 
                     </div>
                     <div class="col-xs-12 col-sm-6 col-sm-height col-full-height country-details home-tile">
-                        <h1>Cameroon</h1>
+                        <h1>Zambia</h1>
 
                         <div class="home-stats-footer">
 
