Cleanup and bug fixing

--- a/createdataset.html
+++ b/createdataset.html
@@ -30,6 +30,15 @@
     <!--<link rel="stylesheet" href='submodules/fenix-ui-metadata-editor/css/pnotify.css'/>-->
     <!--<link rel="stylesheet" href="submodules/fenix-ui-DSDEditor/css/fenix-ui-DSDEditor.css" type="text/css"/>-->
     <!--<link rel="stylesheet" href='submodules/fenix-ui-metadata-editor/css/fenix-metadata-editor.css' />-->
+
+    <style>
+        .form-group {
+            position: relative;
+        }
+    </style>
+
+    <link rel="stylesheet" href='submodules/fenix-ui-metadata-editor/lib/alpaca/alpaca.min.css' />
+
     <link rel="stylesheet" href="css/host.css">
 
     <!-- Favicon -->
