--- a/createdataset.html
+++ b/createdataset.html
@@ -35,9 +35,13 @@
         .form-group {
             position: relative;
         }
+
+        .alpaca-button-disabled {
+            background-color: #c4c4c4 !important;
+        }
     </style>
 
-    <link rel="stylesheet" href='submodules/fenix-ui-metadata-editor/lib/alpaca/alpaca.min.css' />
+    <!--<link rel="stylesheet" href='submodules/fenix-ui-metadata-editor/lib/alpaca/alpaca.min.css' />-->
 
     <link rel="stylesheet" href="css/host.css">
 
