DSDEditor column type color added back

--- a/createdataset.html
+++ b/createdataset.html
@@ -39,6 +39,33 @@
         .alpaca-button-disabled {
             background-color: #c4c4c4 !important;
         }
+
+        .cTdDim {
+            width: 34%;
+            padding: 8px;
+        }
+
+        .cTdVal {
+            width: 33%;
+            padding: 8px;
+        }
+
+        .cTdOther {
+            width: 33%;
+            padding: 8px;
+        }
+
+        .bg-dim {
+            background-color: #DFF0D8;
+        }
+
+        .bg-val {
+            background-color: #D9EDF7;
+        }
+
+        .bg-other {
+            background-color: #FCF8E3;
+        }
     </style>
 
     <!--<link rel="stylesheet" href='submodules/fenix-ui-metadata-editor/lib/alpaca/alpaca.min.css' />-->
