--- a/index.html
+++ b/index.html
@@ -43,21 +43,20 @@
                 <div class="row-same-height row-full-height">
 
                     <div class="col-xs-12 col-sm-3 col-sm-height col-full-height country-welcome home-tile">
-                        <div>Bienvenue au</div>
+                        <div>Welcome to the</div>
 
-                        <h2 class="home-tiles-title">PORTAIL</h2>
+                        <h2 class="home-tiles-title">Data Portal</h2>
 
-                        <div>des données</div>
-                        <div><b>du MINADER de la</b></div>
-                        <div>République du Cameroun</div>
+                        <div>of the</div>
+                        <div><b>Central Statistical Office of Zambia</b></div>
+                        <div>Islamic Republic of Afghanistan</div>
                         <br><br>
-
-                        <p>Un cadre statistique et un système d'information appliquée pour l'analyse et l'élaboration des politiques sont utilisés afin d'organiser, d'intégrer et de diffuser des données et des métadonnées statistiques sur les aliments et sur l'agriculture, qui viennent de sources différentes.</p>
+                        <p>We use a statistical framework and applied information system for analysis and policy-making designed in order to organize, integrate and disseminate statistical data and metadata on food and agriculture coming from different sources.</p>
 
 
                         <div class="home-detail-pointer">
 
-                            <h4 class="afg-title">Détails du pays</h4>
+                            <h4 class="afg-title"> COUNTRY DETAILS</h4>
 
                         </div>
 
@@ -68,22 +67,22 @@
                         <div class="home-stats-footer">
 
                             <div class="row">
-                                <div class="col-xs-2 "><h3>Population</h3>
+                                <div class="col-xs-2 "><h3>Land (100ha)</h3>
 
                                     <p class="subtitle"></p></div>
-                                <div class="col-xs-2"><h3>22773014</h3>
+                                <div class="col-xs-2"><h3>75,261</h3>
 
-                                    <p class="subtitle">TOTALE</p></div>
+                                    <p class="subtitle">TOTAL</p></div>
                                 <div class="col-xs-3 pie-holder">
                                     <div id="percentage-one" class="afg-home-stats"></div>
-                                    <h3>12256208</h3>
+                                    <h3>23,385</h3>
 
-                                    <p class="subtitle">Urbaine</p></div>
+                                    <p class="subtitle">AGRICULTURAL</p></div>
                                 <div class="col-xs-3 pie-holder">
                                     <div id="percentage-two" class="afg-home-stats"></div>
-                                    <h3>10516806</h3>
+                                    <h3>51,876</h3>
 
-                                    <p class="subtitle">Rurale</p></div>
+                                    <p class="subtitle">NON-AGRICULTURAL</p></div>
                             </div>
 
                         </div>
@@ -97,7 +96,7 @@
 
                     <h4>Partenaires principaux</h4>
 
-                    <div class="partner-holder"><img src="css/img/partners/cmr-logos.png" class="img-responsive"></div>
+                    <div class="partner-holder"><img src="css/img/partners/zam-logos.png" class="img-responsive"></div>
 
 
                 </div>
@@ -107,35 +106,29 @@
                 <div class="row-same-height row-full-height">
 
                     <div class="col-xs-12 col-sm-3 col-sm-height col-full-height home-tile aims">
-                        <h4 class="afg-title">Objectifs principaux</h4>
+                        <h4 class="afg-title">PRINCIPAL AIMS</h4>
                         <ol class="uae-responsability">
-                            <li>Supporter l'expertise du pays en fournissant la méthodologie, la classification et le
-                                système de codage pour la collecte, la standardisation et l'harmonisation des données
-                                provenant de sources locales différentes.
+                            <li>Support country expertise by providing methodology, classification and coding system for collection, standardization and harmonization of data coming from various local sources.
                             </li>
-                            <li>Promouvoir les partenariats entre les différentes institutions statistiques des pays.
+                            <li>Promote partnerships between various statistical institutions within countries.
                             </li>
-                            <li>Assister les pays dans l'intégration et l'organisation les données nationales pour les
-                                rendre comparables au niveau international.
+                            <li>Assist countries in integrating and organizing national data to make them comparable at international level.
                             </li>
-                            <li>Etablir des bases de données statistiques nationales couvrant les domaines économiques,
-                                sociaux, démographiques, environnementaux, de l'énergie etc.
+                            <li>Establishing national statistical databases covering economic, social, demographic, environment,
+                                energy and other fields.
                             </li>
-                            <li>Faciliter l'analyse des données pour les comptes d'utilisation des réserves et les
-                                bilans alimentaires.
+                            <li>Facilitate the analysis of data for supply utilization accounts and food balance sheets
                             </li>
-                            <li>Implement a programme that facilitates electronic data collection from countries,
-                                reducing the burden on these countries in completing numerous questionnaires.
-                            </li>
+                            <li>Implement a programme that facilitates electronic data collection from countries, reducing the burden on these countries in completing numerous questionnaires.</li>
                         </ol>
                     </div>
                     <div class="col-xs-12 col-sm-3 col-sm-height col-full-height home-tile gray">
                         <div class="news-content">
-                            <h4 class="afg-title">Nouvelles</h4>
+                            <h4 class="afg-title">NEWS</h4>
 
-                            <h2 class="home-tiles-title">Preparation du RGAE</h2>
+                            <h2 class="home-tiles-title">New CountrySTAT website</h2>
 
-                            <p>PREPARATION DU RECENSEMENT GENERAL DE L'AGRICULTURE ET DE L'ELEVAGE (RGAE)</p>
+                            <p>Statistical framework and applied information system</p>
 
                             <div>
                                 <a class="btn btn-default more pull-right"> <span
@@ -146,8 +139,8 @@
                         <div class="news-image"></div>
                     </div>
                     <div class="col-xs-12 col-sm-3 col-sm-height col-full-height home-tile map">
-                        <h4 class="afg-title">géo-localisation</h4>
-                        <h3>6 00 N, 12 00 E</h3>
+                        <h4 class="afg-title">GEO-LOCATION</h4>
+                        <h3>15 00 S, 30 00 E</h3>
                     </div>
 
 
