--- a/modules.html
+++ b/modules.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 
@@ -58,7 +58,7 @@
                     <!-- Crowd Prices -->
                     <div class="row">
                         <div class="col-xs-6">
-                            <a href='./environmental.html' target='_self'>
+                            <a href='http://fenix.fao.org/demo/nena/' target='_blank'>
                                 <img src="css/img/environmental.png" alt="Environmental Monitoring" class="img-responsive">
                             </a>
                         </div>
