--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="row">
                 <div class="col-xs-12 partners-holder">
 
-                    <h4>Partenaires principaux</h4>
+                    <h4>Main Partners</h4>
 
                     <div class="partner-holder"><img src="css/img/partners/zam-logos.png" class="img-responsive"></div>
 
