--- a/Drag.html
+++ b/Drag.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html manifest="./cache.manifest">
 <head>
     <title>CountrySTAT Zambia</title>
     <script src="http://fenixapps.fao.org/repository/js/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
