--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                         <div>of the</div>
                         <div><b>Central Statistical Office of Zambia</b></div>
-                        <div>Islamic Republic of Afghanistan</div>
+                        <!--<div>Islamic Republic of Afghanistan</div>-->
                         <br><br>
                         <p>We use a statistical framework and applied information system for analysis and policy-making designed in order to organize, integrate and disseminate statistical data and metadata on food and agriculture coming from different sources.</p>
 
