--- a/modules.html
+++ b/modules.html
@@ -58,6 +58,19 @@
                     <!-- Crowd Prices -->
                     <div class="row">
                         <div class="col-xs-6">
+                            <a target="_blank" href="http://fenixapps.fao.org/crowdprices">
+                                <img class="img-responsive" src="http://fenixrepo.fao.org/cdn/images/modules/crowdprices/crowdprices.png">
+                            </a>
+                        </div>
+                        <div class="col-xs-6">
+                            <h2>Crowd Prices</h2>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ac nisl ultricies, suscipit est ac, euismod neque. Duis a vulputate orci. Nulla mattis neque metus, eget efficitur quam rutrum vitae. Integer at leo dolor. Curabitur sapien mi, scelerisque eget lacinia id, efficitur vel neque. Integer quis dapibus ligula, id fringilla enim. Duis sed purus nec lorem gravida accumsan. Phasellus ut hendrerit risus, nec commodo dolor..
+                        </div>
+                    </div>
+                    <br>
+                    <!-- Enviromental -->
+                    <div class="row">
+                        <div class="col-xs-6">
                             <a href='http://fenix.fao.org/demo/nena/' target='_blank'>
                                 <img src="css/img/environmental.png" alt="Environmental Monitoring" class="img-responsive">
                             </a>
@@ -71,7 +84,7 @@
                         </div>
                     </div>
                     <br>
-
+                    <!-- Trade -->
                     <div class="row">
                         <div class="col-xs-6">
                             <a href='./trade.html' target='_self'>
